# Kaya-Suites-OSS

./: .gitignore  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  LICENSE  LICENSE-BSL  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  mirror-oss.yml  release.yml
apps/backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.oss  fly.toml  kaya.yaml
apps/backend/config/: pricing.yaml
apps/backend/content/: 537b753f-c0ce-47ab-9fe7-8abbfc5c2a12.md  bbe148f7-8380-4368-b4ca-c9f9d1249feb.md  engineering_onboarding.md  product_roadmap_2025.md  quarterly_review_q3_2024.md
apps/backend/crates/ee/kaya-billing/: Cargo.toml
apps/backend/crates/ee/kaya-billing/src/: lib.rs  types.rs  webhook.rs
apps/backend/crates/ee/kaya-billing/tests/: webhook_tests.rs
apps/backend/crates/ee/kaya-metering/: Cargo.toml
apps/backend/crates/ee/kaya-metering/src/: aggregation.rs  caps.rs  circuit.rs  error.rs  events.rs  lib.rs  overage.rs  pricing.rs  rate_limit.rs  service.rs
apps/backend/crates/ee/kaya-metering/tests/: metering_tests.rs
apps/backend/crates/ee/kaya-postgres-storage/: Cargo.toml
apps/backend/crates/ee/kaya-postgres-storage/migrations/: 001_initial.sql  002_magic_links.sql  003_billing_paddle.sql  004_metering.sql
apps/backend/crates/ee/kaya-postgres-storage/src/: lib.rs
apps/backend/crates/ee/kaya-postgres-storage/tests/: compile_test.rs  integration.rs
apps/backend/crates/ee/kaya-postgres-storage/tests/fail/: no_user_context.rs  no_user_context.stderr
apps/backend/crates/ee/kaya-tenant/: Cargo.toml
apps/backend/crates/ee/kaya-tenant/src/: auth_adapter.rs  error.rs  lib.rs  magic_link.rs
apps/backend/crates/ee/kaya-tenant/tests/: magic_link.rs
apps/backend/crates/kaya-core/: Cargo.toml
apps/backend/crates/kaya-core/examples/: agent_cli.rs
apps/backend/crates/kaya-core/src/: auth.rs  diff.rs  edit.rs  error.rs  lib.rs  model_router.rs  retrieval.rs  session.rs  storage.rs
apps/backend/crates/kaya-core/src/agent/: log.rs  mod.rs  tool.rs
apps/backend/crates/kaya-core/src/agent/tools/: create_document.rs  delete_document.rs  find_stale_references.rs  list_documents.rs  mod.rs  propose_edit.rs  read_document.rs  search_documents.rs
apps/backend/crates/kaya-core/src/model_router/: anthropic.rs  config.rs  meter.rs  mock.rs  mod.rs  openai.rs  router.rs
apps/backend/crates/kaya-core/tests/: agent_e2e.rs  compile_test.rs
apps/backend/crates/kaya-core/tests/fail/: without_token.rs  without_token.stderr
apps/backend/crates/kaya-core/tests/pass/: with_token.rs
apps/backend/crates/kaya-server/: Cargo.toml
apps/backend/crates/kaya-server/src/: error.rs  lib.rs  state.rs
apps/backend/crates/kaya-server/src/routes/: chat.rs  documents.rs  edits.rs  mod.rs  sessions.rs
apps/backend/crates/kaya-storage/: Cargo.toml
apps/backend/crates/kaya-storage/src/: document.rs  lib.rs  session.rs  sqlite.rs
apps/backend/crates/kaya-storage/tests/: integration.rs
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/(ee)/: page.tsx
apps/web/app/(ee)/admin/: page.tsx
apps/web/app/(ee)/auth/signin/: page.tsx
apps/web/app/(ee)/billing/subscribe/: page.tsx
apps/web/app/(ee)/billing/success/: page.tsx
apps/web/app/(ee)/dashboard/: page.tsx
apps/web/app/(ee)/pricing/: page.tsx
apps/web/app/(ee)/privacy/: page.tsx
apps/web/app/(ee)/terms/: page.tsx
apps/web/app/(shared)/: layout.tsx  page.tsx
apps/web/app/(shared)/chat/: page.tsx
apps/web/app/(shared)/documents/: page.tsx
apps/web/app/(shared)/documents/[id]/: page.tsx
apps/web/app/(shared)/settings/: page.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/documents/: route.ts
apps/web/app/api/documents/[id]/: route.ts
apps/web/app/api/documents/[id]/export/: route.ts
apps/web/app/api/documents/seed-demo/: route.ts
apps/web/app/api/edits/[id]/approve/: route.ts
apps/web/app/api/sessions/: route.ts
apps/web/app/api/sessions/[id]/: route.ts
apps/web/app/api/sessions/[id]/messages/: route.ts
apps/web/app/ee/billing/subscribe/: page.tsx
apps/web/components/shared/: AppNav.tsx  ChatInput.tsx  ChatLayout.tsx  ChatMessage.tsx  ChatPanel.tsx  DeleteReview.tsx  DiffReview.tsx  DocumentEditor.tsx  DocumentList.tsx  DocumentPanel.tsx  MDXEditorClient.tsx  OnboardingChecklist.tsx  SessionRail.tsx
apps/web/hooks/: useOnboarding.ts
apps/web/lib/: api.ts  diff.ts
apps/web/types/: chat.ts
docs/: README.md  api-codegen.md  architecture.md  auth-adapter.md  building.md  license-boundary.md  llm-provider.md  storage-adapter.md
docs/ee/: README.md  billing.md  cloud-auth.md  postgres-storage.md  pricing-config.md  tenant-management.md
scripts/: strip-ee.sh
