[package]
name    = "kaya-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Domain types, traits, and business logic for Kaya Suites (Apache 2.0)"

[dependencies]
async-trait = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
sha2        = "0.10"
reqwest     = { workspace = true }
bytes       = { workspace = true }
tokio       = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
