[package]
name    = "kaya-storage"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "SQLite storage adapter for Kaya Suites OSS (Apache 2.0)"

[dependencies]
kaya-core   = { path = "../kaya-core" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
sqlx        = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde_yaml  = "0.9"
sha2        = "0.10"
walkdir     = "2"

[dev-dependencies]
tempfile = "3"
