[package]
name    = "kaya-postgres-storage"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Postgres + pgvector storage adapter for Kaya Suites cloud (BSL 1.1)"

[dependencies]
kaya-core   = { path = "../../kaya-core" }
kaya-tenant = { path = "../kaya-tenant" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true }
sha2        = "0.10"
sqlx        = { version = "0.8", features = [
    "postgres", "runtime-tokio", "uuid", "chrono", "migrate", "json",
] }
pgvector    = { version = "0.4", features = ["sqlx"] }

[dev-dependencies]
trybuild = { workspace = true }
