[package]
name    = "kaya-tenant"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Multi-tenant context and isolation for Kaya Suites cloud (BSL 1.1)"

[dependencies]
kaya-core   = { path = "../../kaya-core" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
