[package]
name        = "kaya-tenant"
version     = "0.1.0"
edition     = "2024"
license     = "BUSL-1.1"
description = "Magic-link auth and multi-tenant context for Kaya Suites cloud (BSL 1.1)"

[dependencies]
kaya-core   = { path = "../../kaya-core" }
async-trait = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }

# Auth session management
axum-login                = "0.17"
tower-sessions            = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }

# Database
sqlx = { version = "0.8", features = [
    "postgres", "runtime-tokio", "uuid", "chrono",
] }

# Token generation + hashing
rand = "0.8"
sha2 = "0.10"
hex  = "0.4"

# Observability
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true }
sqlx  = { version = "0.8", features = [
    "postgres", "runtime-tokio", "uuid", "chrono",
] }
